--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,63 +1,47 @@
+/* :root {
+
+} */
+
+* {
+    margin: 0 auto;
+}
+
+
+.search, .main{
+    border: 5px solid blue;
+}
+
+.search-section,  .current {
+    border: 5px solid green;
+}
+
+.top-current, .bottom-current, .forecast-cards {
+    border: 5px solid lightgreen;
+}
+
+.current-title, #current-time, #current-date, .daynight, .current-info, .cards {
+    border: 5px solid yellow;
+}
+
+.current-degree-icon, .sunset-sunrise, .high-low, .info-box, .forecast-date, .forecast-temp, .forecast-wind, .forecast-humidity {
+    border: 5px solid orange;
+}
+
+#sunrise, #sunset, #current-degree, #current-icon, #high, #low, #current-wind, #current-uv-index, .forecast-degrees, .forecast-icon {
+    border: 5px solid red;
+}
 
 
 main {
+    border: 5px solid black;
     display: flex;
+    padding: 1rem;
 }
 
 aside {
-    border: 2px black solid;
-    width: 25%;
-    margin: 10px 0px;
+    padding: 1rem;
 }
 
-section {
-    width: 75%;
+.search-history {
+    border-top: 2px solid black;
 }
-
-form {
-    padding: 0px 5px;
-    display: inline-flex;
-    flex-direction: column;
-    width:97.5%;
-}
-
-h1 {
-    margin: 0 auto;
-    padding: 10px;
-}
-
-h2 {
-    padding: 0px 5px;
-    margin: 5px 0px;
-}
-.cards {
-    display: flex;
-    justify-content: space-between;
-
-}
-
-.card {
-    /* flex:0 1 24%; */
-    border: 2px black solid;
-    margin-right: 20px;
-    width: 20%;
-}
-
-.forecast {
-    margin: 10px 10px;
-}
-
-.history {
-    border-top: 2px gray solid;
-    margin: 10px;
-}
-
-#card-current-city {
-    border: 2px black solid;
-    margin: 10px 10px;
-}
-
-#search, #city {
-    margin: 5px 0px;
-}
-
